--- a/calcuracer-server/package.json
+++ b/calcuracer-server/package.json
@@ -39,6 +39,7 @@
     "ioredis": "^4.28.2",
     "mongoose": "^6.1.5",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.4.1",
     "type-graphql": "^1.1.1"
   }
 }
