rushed ahead with the setup, need to figure out whats broken

--- a/calcuracer-server/package.json
+++ b/calcuracer-server/package.json
@@ -35,7 +35,7 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
-    "graphql": "^16.2.0",
+    "graphql": "15.3.0",
     "ioredis": "^4.28.2",
     "mongoose": "^6.1.5",
     "reflect-metadata": "^0.1.13",
