--- a/calcuracer-server/package.json
+++ b/calcuracer-server/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.28.7",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.8",
     "@types/redis": "^4.0.11",
     "gen-env-types": "^1.3.0",
